Give the dashboard a read surface that stays cheap under load
A dashboard polled every couple of seconds cannot pay for the whole
history on every read. The naive shape of the picture it needs — counts
over the entire executions table, lists carrying every attempt — gets
more expensive exactly as the system accumulates work, which is backwards
for the one endpoint that is guaranteed to be hit forever.

GET /overview therefore answers with live work only (ENQUEUED, RUNNING,
RETRY_SCHEDULED; always the three, zero included) plus terminal
throughput over a recent window: the cost is proportional to the backlog
and to the window, never to the size of the table. The window is
selectable (?window=, default 60s, clamped 1s-1h) and the APPLIED window
travels back in the response, same idiom as the page-size clamp. A new
index on mohs_attempts (finished_at, outcome) keeps the throughput read
on an index range in all four dialects, and the counts read without locks
where the dialect needs to be told (JdbcDialect#lockFreeCountHint) —
plans recorded in docs/performance/explain-overview-*.txt.

GET /overview/stream pushes that same picture over SSE every 2s. One
shared tick serves every subscriber, so the READS cost the same as a
single GET /overview no matter how many dashboards are connected, and
nothing at all with no subscriber. Sends are per subscriber on virtual
threads with conflation: a client that has not finished the previous
frame is skipped rather than queued — the next frame is the whole picture
again, so a slow laptop delays only itself instead of setting everyone's
latency. Each event carries {asOf, data}, one instant per picture across
the four events of a tick, so the frontend can order and distribute
frames without trusting its own clock.

Execution lists now return summaries without attempts, which drops a
second query per page and an unbounded error TEXT from the wire; the
detail endpoint still hydrates them, as the REST design table always
said.